--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -1,19 +1,20 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
-@using FarmerbotWebUI.Client
-@using FarmerbotWebUI.Client.Shared
-@using FarmerbotWebUI.Shared
-@using FarmerbotWebUI.Shared.BotConfig
-@using FarmerbotWebUI.Shared.NodeStatus
+﻿@using System.Net.Http;
+@using System.Net.Http.Json;
+@using Microsoft.AspNetCore.Components.Forms;
+@using Microsoft.AspNetCore.Components.Routing;
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Components.Web.Virtualization;
+@using Microsoft.AspNetCore.Components.WebAssembly.Http;
+@using Microsoft.JSInterop;
+@using FarmerbotWebUI.Client;
+@using FarmerbotWebUI.Client.Shared;
+@using FarmerbotWebUI.Shared;
+@using FarmerbotWebUI.Shared.BotConfig;
+@using FarmerbotWebUI.Shared.NodeStatus;
 @using FarmerbotWebUI.Client.Services.Settings;
 @using FarmerbotWebUI.Client.Services.Docker;
 @using FarmerbotWebUI.Client.Services.EventConsole;
 @using FarmerbotWebUI.Client.Services.Filesystem;
-@using Radzen
-@using Radzen.Blazor
+@using FarmerbotWebUI.Client.Views;
+@using Radzen;
+@using Radzen.Blazor;
