--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -52,7 +52,7 @@
         <RadzenPanelMenu>
             <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Dashboard" Icon="dashboard" Path="/dashboard" />
-            <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Configure Nodes" Icon="build" Path="/configureBot" />
+            <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Configure Bots" Icon="build" Path="/configureBot" />
             <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Maintenance" Icon="engineering" Path="/maintenance" />
         </RadzenPanelMenu>
         <div class="py-3 py-md-4" style="padding: var(--rz-panel-menu-item-padding);">
