--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,6 +11,8 @@
 @using FarmerbotWebUI.Shared;
 @using FarmerbotWebUI.Shared.BotConfig;
 @using FarmerbotWebUI.Shared.NodeStatus;
+@using FarmerbotWebUI.Client.Services.Minting;
+@using FarmerbotWebUI.Client.Services.NodeStatus;
 @using FarmerbotWebUI.Client.Services.Settings;
 @using FarmerbotWebUI.Client.Services.Docker;
 @using FarmerbotWebUI.Client.Services.EventConsole;
